# sqlpp

./: CMakeLists.txt  LICENSE  README.md  main.cpp  sqlpp.h
source/: CMakeLists.txt  sqlpp.h
source/sqlpp/: assignment.h  column.h  condition.cpp  condition.h  database.cpp  database.h  result.cpp  result.h  statement.h  table.h  types.cpp  types.h  value.h
source/sqlpp/expr/: condition.h  expression.h  node.cpp  node.h  term.h
source/sqlpp/stmt/: common.cpp  common.h  create.cpp  create.h  insert.cpp  insert.h  select.cpp  select.h  update.cpp  update.h
sqlpp/: column.cpp  column.h  condition.cpp  condition.h  database.cpp  database.h  result.cpp  result.h  statement.cpp  statement.h  table.cpp  table.h  types.cpp  types.h  value.cpp  value.h
sqlpp/stmt/: common.cpp  common.h  create.cpp  insert.cpp  insert.h  select.cpp  select.h
tests/: CMakeLists.txt  main.cpp
tests/compile/: check_types.cpp  compile.cmake
tests/runtime/: basic.cpp  custom_type.cpp  runtime.cmake
